# 42_pacman

./: .gitignore  Makefile  README.md  SPECIFICATIONS.md  config.json  leaderboard.json  pac-man.py  pyproject.toml  test.py
data/: config.json  leaderboard.json
maze_gen/: READ.txt
project_mangement/: GANTT.md  RISKS.md  Requirements Specifications.md  TEAM.md  TECHNICAL_ARCHITECTURE.md  TEST_PLAN.md
src/: config_parser.py  game_engine.py  leaderboard.py
src/algorithms/: algorithms.py  heat_map.py
src/config/: config_loader.py
src/entity/: entity.py  ghost.py  pacgum.py  player.py  super_pacgum.py
src/event_bus/: cheat_manager.py  event_bus.py  game_manager.py  score_manager.py
src/game_engine/: finish_view.py  game_engine.py  game_state.py  game_view.py  menu_view.py  pause_view.py
src/maze_adapter/: maze_adapter.py
src/renderer/: renderer.py
src/utils/: __init__.py
src/utils/logger/: Logger.py
src/utils/run_security/: RunSecurity.py  __init__.py
test/: test_player.py
