[project]
name = "42-pacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "flake8>=7.3.0",
    "mazegenerator",
    "pydantic>=2.13.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "flake8>=7.3.0",
    "mypy>=1.20.2",
]

[tool.uv.sources]
mazegenerator = { path = "maze_gen/mazegenerator-00001-py3-none-any.whl" }
